2005-06-25 Anatoly Sokolov <aesok@pautinka.net>

    * include/avr/iom169.h: Change SIG_COMPERATOR to SIG_COMPARATOR.
    * include/avr/iotn26.h: Change SIG_EPROM_READY to SIG_EEPROM_READY.
    [Fixes bug #12955]
    * NEWS: Update bugs fixed list.
    * include/avr/io.h: No undef EERIE if defined SIG_EE_READY

2005-06-24 Anatoly Sokolov <aesok@pautinka.net>

    * include/avr/iom325.h: Fix bit definition for UCSZ02.
    * include/avr/iom3250.h: ( Ditto. )
    * include/avr/iom645.h: ( Ditto. )
    * include/avr/iom6450.h: ( Ditto. )
    [Fixes bug #13327]
    * NEWS: Update bugs fixed list.

2005-06-07  Eric B. Weddington  <ericw@evcohs.com>

    * include/math.h: Fix documenation for log10() function in math.h.
    [Fixed bug #12785]
    * NEWS: Update bugs fixed list.

2005-06-07  Eric B. Weddington  <ericw@evcohs.com>

    * include/avr/iocan128.h: Fix bit definition for SJW0.
    [Fixes bug #12448]
    * NEWS: Update bugs fixed list.

2005-06-07  Eric B. Weddington  <ericw@evcohs.com>

    * include/avr/iom169.h: Add new bit definitions for LCDCCR register.
    [Fixes bug #12422]
    * NEWS: Update bugs fixed list.

2005-04-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/demo.c: update for ATmega16.

2005-02-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: sbi() has been removed, document standard
	C bit operators instead (fixes savannah bug #12040); mention
	that external RAM initialization as a C function would
	preferrably go into .init3 where __zero_reg__ has already
	been initialized.

	* doc/api/sections.dox: mention that .init2 also clears
	__zero_reg__, remove old outp() macro usage in example code.

2005-02-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfscanf.c: fix field width accounting for leading
	signs and/or 0/0x prefixes.  Fixes bug #11987.

2005-02-08  Eric B. Weddington  <ericw@evcohs.com>

    * libc/stdio/Makefile.am: Change optimisation level for building
    printf libraries to -Os.